// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/VerticalTabs Active Item 1`] = `
<div
  data-css-b1z6un=""
>
  <ul
    className="psds-verticaltabs"
  >
    <li>
      <h2
        className="psds-verticaltabs__group__header psds-theme--dark"
      >
        <div>
          <span
            className="psds-verticaltabs__header__label"
          >
            Group Header
          </span>
        </div>
      </h2>
      <ul
        className="psds-verticaltabs__list"
      >
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                First
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                Second
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
            data-active={true}
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                Third
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                Fourth
              </span>
            </span>
          </div>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/VerticalTabs Basic 1`] = `
<div
  data-css-b1z6un=""
>
  <ul
    className="psds-verticaltabs"
  >
    <li>
      <ul
        className="psds-verticaltabs__list"
      >
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                First
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                Second
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                Third
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                Fourth
              </span>
            </span>
          </div>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/VerticalTabs Collapsible 1`] = `
<div
  data-css-b1z6un=""
>
  <ul
    className="psds-verticaltabs"
  >
    <div>
      <h2
        className="psds-verticaltabs__group__header psds-theme--dark"
      >
        <button
          aria-expanded="false"
          className="psds-verticaltabs__group__button"
          onClick={[Function]}
        >
          <span
            className="psds-verticaltabs__header__label"
          >
            Group Header
          </span>
          <div
            aria-hidden="true"
            className="psds-icon psds-icon--size-small psds-verticaltabs__rotatable"
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
              />
            </svg>
          </div>
        </button>
      </h2>
      <ul
        aria-hidden={true}
        className="psds-verticaltabs__list psds-verticaltabs__group__collapsible-list"
      >
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                First
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                Second
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                Third
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                Fourth
              </span>
            </span>
          </div>
        </li>
      </ul>
    </div>
  </ul>
</div>
`;

exports[`Storyshots Components/VerticalTabs Collapsible Start Open 1`] = `
<div
  data-css-b1z6un=""
>
  <ul
    className="psds-verticaltabs"
  >
    <div>
      <h2
        className="psds-verticaltabs__group__header psds-theme--dark"
      >
        <button
          aria-expanded="true"
          className="psds-verticaltabs__group__button"
          onClick={[Function]}
        >
          <span
            className="psds-verticaltabs__header__label"
          >
            Group Header
          </span>
          <div
            aria-hidden="true"
            className="psds-icon psds-icon--size-small psds-verticaltabs__rotatable psds-verticaltabs__rotatable--is-open"
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
              />
            </svg>
          </div>
        </button>
      </h2>
      <ul
        aria-hidden={false}
        className="psds-verticaltabs__list psds-verticaltabs__group__collapsible-list"
      >
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                First
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                Second
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                Third
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                Fourth
              </span>
            </span>
          </div>
        </li>
      </ul>
    </div>
  </ul>
</div>
`;

exports[`Storyshots Components/VerticalTabs Header 1`] = `
<div
  data-css-b1z6un=""
>
  <ul
    className="psds-verticaltabs"
  >
    <li>
      <h2
        className="psds-verticaltabs__group__header psds-theme--dark"
      >
        <div>
          <span
            className="psds-verticaltabs__header__label"
          >
            Group Header
          </span>
        </div>
      </h2>
      <ul
        className="psds-verticaltabs__list"
      >
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                First
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                Second
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                Third
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                Fourth
              </span>
            </span>
          </div>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/VerticalTabs Tier 1 Active 1`] = `
<div
  data-css-b1z6un=""
>
  <ul
    className="psds-verticaltabs"
  >
    <li>
      <div
        className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
        data-active={true}
      >
        <span
          aria-expanded={true}
          className="psds-verticaltabs__tier1__header"
        >
          <div
            className="psds-icon psds-icon--size-medium psds-verticaltabs__item__icon"
            data-active={true}
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
          <span
            className="psds-verticaltabs__header__label"
          >
            text here
          </span>
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/VerticalTabs Tier 1 Collapsible 1`] = `
<div
  data-css-b1z6un=""
>
  <ul
    className="psds-verticaltabs"
  >
    <li>
      <div
        className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
      >
        <button
          aria-expanded={true}
          className="psds-verticaltabs__tier1__header"
          onClick={[Function]}
        >
          <div
            className="psds-icon psds-icon--size-medium psds-verticaltabs__item__icon"
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
          <span
            className="psds-verticaltabs__header__label"
          >
            text here
          </span>
          <div
            aria-hidden="true"
            className="psds-icon psds-icon--size-small psds-verticaltabs__header__label__icon"
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
              />
            </svg>
          </div>
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/VerticalTabs Tier 1 Header Basic 1`] = `
<div
  data-css-b1z6un=""
>
  <ul
    className="psds-verticaltabs"
  >
    <li>
      <div
        className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
      >
        <span
          aria-expanded={true}
          className="psds-verticaltabs__tier1__header"
        >
          <div
            className="psds-icon psds-icon--size-medium psds-verticaltabs__item__icon"
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
          <span
            className="psds-verticaltabs__header__label"
          >
            text here
          </span>
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/VerticalTabs Tier 1 Header Button 1`] = `
<div
  data-css-b1z6un=""
>
  <ul
    className="psds-verticaltabs"
  >
    <li>
      <div
        className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
      >
        <button
          aria-expanded={true}
          className="psds-verticaltabs__tier1__header"
          onClick={[Function]}
        >
          <div
            className="psds-icon psds-icon--size-medium psds-verticaltabs__item__icon"
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
          <span
            className="psds-verticaltabs__header__label"
          >
            text here
          </span>
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/VerticalTabs Tier 1 Header Link 1`] = `
<div
  data-css-b1z6un=""
>
  <ul
    className="psds-verticaltabs"
  >
    <li>
      <div
        className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
      >
        <a
          aria-expanded={true}
          className="psds-verticaltabs__tier1__header"
          href="href"
        >
          <div
            className="psds-icon psds-icon--size-medium psds-verticaltabs__item__icon"
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
          <span
            className="psds-verticaltabs__header__label"
          >
            text here
          </span>
        </a>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/VerticalTabs Tier 2 Active 1`] = `
<div
  data-css-b1z6un=""
>
  <ul
    className="psds-verticaltabs"
  >
    <li>
      <div
        className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
        data-active={true}
      >
        <span
          className="psds-verticaltabs__tier2__header"
        >
          <span
            className="psds-verticaltabs__header__label"
          >
            text here
          </span>
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/VerticalTabs Tier 2 Basic 1`] = `
<div
  data-css-b1z6un=""
>
  <ul
    className="psds-verticaltabs"
  >
    <li>
      <div
        className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
      >
        <span
          className="psds-verticaltabs__tier2__header"
        >
          <span
            className="psds-verticaltabs__header__label"
          >
            text here
          </span>
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/VerticalTabs Tier 2 Header Basic 1`] = `
<div
  data-css-b1z6un=""
>
  <ul
    className="psds-verticaltabs"
  >
    <li>
      <div
        className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
      >
        <span
          className="psds-verticaltabs__tier2__header"
          icon={<PlaceholderIcon />}
        >
          <span
            className="psds-verticaltabs__header__label"
          >
            text here
          </span>
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/VerticalTabs Tier 2 Header Button 1`] = `
<div
  data-css-b1z6un=""
>
  <ul
    className="psds-verticaltabs"
  >
    <li>
      <div
        className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
      >
        <button
          className="psds-verticaltabs__tier2__header"
          icon={<PlaceholderIcon />}
          onClick={[Function]}
        >
          <span
            className="psds-verticaltabs__header__label"
          >
            text here
          </span>
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/VerticalTabs Tier 2 Header Link 1`] = `
<div
  data-css-b1z6un=""
>
  <ul
    className="psds-verticaltabs"
  >
    <li>
      <div
        className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
      >
        <a
          className="psds-verticaltabs__tier2__header"
          href="#"
          icon={<PlaceholderIcon />}
        >
          <span
            className="psds-verticaltabs__header__label"
          >
            text here
          </span>
        </a>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/VerticalTabs Tiers 1`] = `
<div
  data-css-b1z6un=""
>
  <ul
    className="psds-verticaltabs"
  >
    <li>
      <h2
        className="psds-verticaltabs__group__header psds-theme--dark"
      >
        <div>
          <span
            className="psds-verticaltabs__header__label"
          >
            Group Header
          </span>
        </div>
      </h2>
      <ul
        className="psds-verticaltabs__list"
      >
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                First
              </span>
            </span>
          </div>
          <ul
            className="psds-verticaltabs__list"
          >
            <li>
              <div
                className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
              >
                <span
                  className="psds-verticaltabs__tier2__header"
                >
                  <span
                    className="psds-verticaltabs__header__label"
                  >
                    First
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
              >
                <span
                  className="psds-verticaltabs__tier2__header"
                >
                  <span
                    className="psds-verticaltabs__header__label"
                  >
                    Second
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
              >
                <span
                  className="psds-verticaltabs__tier2__header"
                >
                  <span
                    className="psds-verticaltabs__header__label"
                  >
                    Third
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </li>
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                Second
              </span>
            </span>
          </div>
          <ul
            className="psds-verticaltabs__list"
          >
            <li>
              <div
                className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
              >
                <span
                  className="psds-verticaltabs__tier2__header"
                >
                  <span
                    className="psds-verticaltabs__header__label"
                  >
                    First
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
              >
                <span
                  className="psds-verticaltabs__tier2__header"
                >
                  <span
                    className="psds-verticaltabs__header__label"
                  >
                    Second
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
              >
                <span
                  className="psds-verticaltabs__tier2__header"
                >
                  <span
                    className="psds-verticaltabs__header__label"
                  >
                    Third
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/VerticalTabs Truncated 1`] = `
<div
  data-css-b1z6un=""
>
  <ul
    className="psds-verticaltabs"
  >
    <li>
      <h2
        className="psds-verticaltabs__group__header psds-theme--dark"
      >
        <div>
          <span
            className="psds-verticaltabs__header__label"
          >
            Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
          </span>
        </div>
      </h2>
      <ul
        className="psds-verticaltabs__list"
      >
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
              </span>
            </span>
          </div>
          <ul
            className="psds-verticaltabs__list"
          >
            <li>
              <div
                className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
              >
                <span
                  className="psds-verticaltabs__tier2__header"
                >
                  <span
                    className="psds-verticaltabs__header__label"
                  >
                    Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
              >
                <span
                  className="psds-verticaltabs__tier2__header"
                >
                  <span
                    className="psds-verticaltabs__header__label"
                  >
                    Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
              >
                <span
                  className="psds-verticaltabs__tier2__header"
                >
                  <span
                    className="psds-verticaltabs__header__label"
                  >
                    Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </li>
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <div
                className="psds-icon psds-icon--size-medium psds-verticaltabs__item__icon"
              >
                <svg
                  aria-label="placeholder icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span
                className="psds-verticaltabs__header__label"
              >
                Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
              </span>
            </span>
          </div>
          <ul
            className="psds-verticaltabs__list"
          >
            <li>
              <div
                className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
              >
                <span
                  className="psds-verticaltabs__tier2__header"
                >
                  <span
                    className="psds-verticaltabs__header__label"
                  >
                    Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
              >
                <span
                  className="psds-verticaltabs__tier2__header"
                >
                  <span
                    className="psds-verticaltabs__header__label"
                  >
                    Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
              >
                <span
                  className="psds-verticaltabs__tier2__header"
                >
                  <span
                    className="psds-verticaltabs__header__label"
                  >
                    Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </li>
      </ul>
    </li>
    <div>
      <h2
        className="psds-verticaltabs__group__header psds-theme--dark"
      >
        <button
          aria-expanded="true"
          className="psds-verticaltabs__group__button"
          onClick={[Function]}
        >
          <span
            className="psds-verticaltabs__header__label"
          >
            Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
          </span>
          <div
            aria-hidden="true"
            className="psds-icon psds-icon--size-small psds-verticaltabs__rotatable psds-verticaltabs__rotatable--is-open"
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
              />
            </svg>
          </div>
        </button>
      </h2>
      <ul
        aria-hidden={false}
        className="psds-verticaltabs__list psds-verticaltabs__group__collapsible-list"
      >
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
              </span>
            </span>
          </div>
          <ul
            className="psds-verticaltabs__list"
          >
            <li>
              <div
                className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
              >
                <span
                  className="psds-verticaltabs__tier2__header"
                >
                  <span
                    className="psds-verticaltabs__header__label"
                  >
                    Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
              >
                <span
                  className="psds-verticaltabs__tier2__header"
                >
                  <span
                    className="psds-verticaltabs__header__label"
                  >
                    Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
              >
                <span
                  className="psds-verticaltabs__tier2__header"
                >
                  <span
                    className="psds-verticaltabs__header__label"
                  >
                    Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </li>
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <div
                className="psds-icon psds-icon--size-medium psds-verticaltabs__item__icon"
              >
                <svg
                  aria-label="placeholder icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span
                className="psds-verticaltabs__header__label"
              >
                Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
              </span>
            </span>
          </div>
          <ul
            className="psds-verticaltabs__list"
          >
            <li>
              <div
                className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
              >
                <span
                  className="psds-verticaltabs__tier2__header"
                >
                  <span
                    className="psds-verticaltabs__header__label"
                  >
                    Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
              >
                <span
                  className="psds-verticaltabs__tier2__header"
                >
                  <span
                    className="psds-verticaltabs__header__label"
                  >
                    Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
              >
                <span
                  className="psds-verticaltabs__tier2__header"
                >
                  <span
                    className="psds-verticaltabs__header__label"
                  >
                    Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </li>
      </ul>
    </div>
  </ul>
</div>
`;
